<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BIT App</string>
    <string name="welcome_with_app_name">Welcome to BIT App</string>
    <string name="welcome_with_account_des">Create an account to save all setting\nand attendance data.</string>
    <string name="topic_notice">NoticeByAiyu</string>
    <string name="topic_event">EventByAiyu</string>
    <string name="topic_update">UpdateByAiyu</string>
    <string name="topic_app">AppByAiyu</string>
    <string name="app_version">4.1.1 Patch 4</string>
    <string name="full_version">Version %s</string>
    <string name="instaLink">https://bitapp.page.link/insta</string>
    <string name="erp_link">https://erp.bitmesra.ac.in/iitmsv4eGq0RuNHb0G5WbhLmTKLmTO7YBcJ4RHuXxCNPvuIw=?enc=EGbCGWnlHNJ/WdgJnKH8DA==</string>
    <string name="theory">Theory</string>
    <string name="lab">Lab</string>
    <string name="pe">Program Elective</string>
    <string name="chooseCourseTitle">Choose your course !!</string>
    <string name="chooseSemTitle">Choose your sem !!</string>
    <string name="bba">BBA</string>
    <string name="bca">BCA</string>
    <string name="save">Save</string>
    <string name="connectWithMe">Connect With Me</string>
    <string name="yourSubjects">Your Subjects</string>
    <string name="holidayThisMonth">Holidays this month</string>
    <string name="attendanceStats">Attendance Stats</string>
    <string name="overallAttendance">Overall : %s</string>
    <string name="totalPresent">Total Present</string>
    <string name="totalClasses">Total Classes</string>
    <string name="overallAttendanceStatus">Overall Attendance Status</string>
    <string name="searchForSubject">Search for subject &#38; more</string>
    <string name="subjects">Subjects</string>
    <string name="subject">Subject</string>
    <string name="notice_a">Notice</string>
    <string name="holiday">Holiday</string>
    <string name="event_a">Event</string>
    <string name="search_for_syllabus">Search for syllabus(Offline Syllabus)</string>
    <string name="setting">Setting</string>
    <string name="edit">Edit</string>
    <string name="dot">.</string>
    <string name="history">History</string>
    <string name="event_this_week">Recent Events</string>
    <string name="show_all">See All</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="goal">Goal : %s</string>
    <string name="add_subject">Add Subject</string>
    <string name="add_subject_syllabus">Add Subject From Syllabus</string>
    <string name="no_result">No result found !!</string>
    <string name="search_any_thing">Search for anything !!</string>
    <string name="next">Next</string>
    <string name="initial_total">Initial Total</string>
    <string name="initial_present">Initial Present</string>
    <string name="uniques_key_warning">Try another Subject name. </string>
    <string name="update_downloaded">Update Downloaded</string>
    <string name="install">Install</string>
    <string name="app_share_content">Check out BIT Lalpur App :</string>
    <string name="play_store_link">https://play.google.com/store/apps/details?id=</string>
    <string name="share_app">Share BIT APP</string>
    <string-array name="email">
        <item>ayaan35200@gmail.com</item>
    </string-array>
    <string name="bug_repost">BUG Report 😰</string>
    <string name="bug_title">Send Mail</string>
    <string name="gmail_package">com.google.android.gm</string>
    <string name="no_intent_available">No Activity found to handle Intent</string>
    <string name="developed_by">Developed by Ayaan</string>
    <string name="version">Version</string>
    <string name="developers">Developers</string>
    <string name="click_warning">Click one item at a time !!</string>
    <string name="erp">ERP</string>
    <string name="societies">Societies</string>
    <string name="events">Events</string>
    <string name="event">Event</string>
    <string name="holidays">Holidays</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="connect">Connect With Us</string>
    <string name="report">Issue</string>
    <string name="report_app_data">Issue (App Data)</string>
    <string name="home">Home</string>
    <string name="notice">Notice</string>
    <string name="courses">Courses</string>
    <string name="attendance">Attendance</string>
    <string name="bit_icon">BIT Icon</string>
    <string name="link">Link</string>
    <string name="acknowledgements">Acknowledgements</string>
    <string name="insta">Instagram</string>
    <string name="website">Website</string>
    <string name="git">GitHub</string>
    <string name="list_all">List All</string>
    <string name="main">Main</string>
    <string name="res">Res</string>
    <string name="download_syllabus">Download Syllabus</string>
    <string name="sem1">1</string>
    <string name="sem2">2</string>
    <string name="sem3">3</string>
    <string name="sem4">4</string>
    <string name="sem5">5</string>
    <string name="sem6">6</string>
    <string name="sem1_title">Semester 1</string>
    <string name="sem2_title">Semester 2</string>
    <string name="sem3_title">Semester 3</string>
    <string name="sem4_title">Semester 4</string>
    <string name="sem5_title">Semester 5</string>
    <string name="sem6_title">Semester 6</string>
    <string name="blank">""</string>
    <string name="menu">Menu</string>
    <string name="rate_up">Rate Us</string>
    <string name="share_rate_us"><![CDATA[Share & Rate Us]]></string>
    <string name="search_setting">Search Settings</string>
    <string name="dismiss">Dismiss</string>
    <string name="course_preference">Course Preference</string>
    <string name="created">Created : %s</string>
    <string name="no_teacher_name">No Teacher Name</string>
    <string name="default_time_formate_without_time">MMM dd,YYYY</string>
    <string name="teacher_name">Teacher\'s Name</string>
    <string name="na">N/A</string>
    <string name="on_track">On track don\'t miss next class</string>
    <string name="leave_class">You can leave %s class</string>
    <string name="error">Error</string>
    <string name="attend_class">Attend Next %s Class</string>
    <string name="present_total">%s/%s</string>
    <string name="attendance_ration_title">Attendance :</string>
    <string name="forward_slash">/</string>
    <string name="status">Status :</string>
    <string name="theme">Theme</string>
    <string name="system_default">System default</string>
    <string name="light_theme">Light</string>
    <string name="dark_theme">Dark</string>
    <string name="societies_event"><![CDATA[Societies & Events ]]></string>
    <string name="notice_sender">%s</string>
    <string name="deep_link_share_notice">https://bitbyaiyu.github.io/notice/path=%s</string>
    <string name="deep_link_share_event_link">https://bitbyaiyu.github.io/event/path=%s</string>
    <string name="loading">Loading.....</string>
    <string name="erp_holiday"><![CDATA[Erp & Classes ]]></string>
    <string name="imp_war">Important Warning</string>
    <string name="quit_app">Quit App</string>
    <string name="open_new_app">Open New App</string>
    <string name="choose_image">Choose Your Image</string>
    <string name="about">About</string>
    <string name="managers">App Managers</string>
    <string name="viewInPlayStore">View in Play Store</string>
    <string name="no_data">No data found</string>
    <string name="chooseTheme">Choose Theme</string>
    <string name="undo">Undo</string>
    <string name="delete">Delete</string>
    <string name="changePercentage">Change Percentage</string>
    <string name="present">Present :</string>
    <string name="total">Total :</string>
    <string name="without_img">Without Image</string>
    <string name="linked_in">LinkedIn</string>
    <string name="stack_over_flow">StackOverFlow</string>
    <string name="enter_sem">Enter Your SGPA :-</string>
    <string name="cgpa_calculator">CGPA Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="over_all_cgpa">Overall CGPA </string>
    <string name="disclaimer_cgpa">* This will automatically save your CGPA.\nTo Clear your CGPA, tap the clear option in option menu.</string>
    <string name="clear">Clear</string>
    <string name="cgpa_calculator_clear_message">Saved CGPA is cleared!!</string>
    <string name="course_sem_text">%s up to %s</string>
    <string name="your_sgpa">Sgpa Graph</string>
    <string name="no_internet_detected">No internet detected, Connect with internet to share %s with image!!</string>
    <string name="no_event_found">No event found</string>
    <string name="no_notice_found">No notice found</string>
    <string name="little_sign">Little sign</string>
    <string name="uninstall_old_app">Uninstall your old BIT App</string>
    <string name="uninstall">Uninstall</string>
    <string name="do_not_show_this">Don\'t show this again</string>
    <string name="may_be_next_time">"May be next time "</string>
    <string name="note_from_dev">The owner of this application is a student of BIT Lalpur and does not have any affiliation with BIT itself.</string>
    <string name="dev">This app is now open source🤗.\nKnow About <a href="https://github.com/aiyu-ayaan">Dev</a></string>
    <string name="contributors">Contributors</string>
    <string name="ngos">NGOs</string>
    <string name="societies_and_ngos">Societies &#38; NGOs</string>
    <string name="watch_video"><a href="https://github.com/aiyu-ayaan">Watch Video</a></string>
    <string name="publishers_name">By Puppeteers</string>
    <string name="sharable">Sharable</string>
    <string name="sharable_des">You can share this %s with your friends</string>
    <string name="home_edit_button">Edit your subjects !!</string>
    <string name="home_edit_button_des">Personalize your subjects.</string>
    <string name="home_setting_button">Setting</string>
    <string name="home_setting_button_des">Any time you can change your preferences.</string>
    <string name="home_search">Search</string>
    <string name="skip">Skip</string>
    <string name="need_of_log_in"><u>Why would you log In ?</u></string>
    <string name="loading_setting_up">Setting things up !!</string>
    <string name="profile">Profile</string>
    <string name="course">Course</string>
    <string name="sem">Sem</string>
    <string name="last_sync">Last Sync :  %s</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_message">Really want to sign out ?</string>
    <string name="attach_image">Attach Images</string>
    <string name="attach_video">Attach Video</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="switch_to_new">Switch To Online</string>
    <string name="switch_to_old">Switch To Offline</string>
    <string name="no_data_choose_syllabus">Syllabus for this semester not added yet 😣.\nWill be added soon 😇</string>
    <string name="theory_code">%s . %s </string>
    <string name="all_subjects">All Subjects</string>
    <string name="text_book">Text Books :</string>
    <string name="reference_book">Reference Books :</string>
    <string name="holiday_title">Holiday %s</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="present_by_total">%s / %s</string>
    <string name="moreThan80">😎</string>
    <string name="moreThanDefault">😁</string>
    <string name="lessThanDefault">😥</string>
    <string name="feedback_to_dev">Feedback</string>
    <string name="whats_new">What\'s new</string>
    <string name="library">Library Manager</string>
    <string name="add_subject_syllabus_online">Add From Online Syllabus</string>
    <string name="syllabus">Syllabus</string>
    <string name="administration">Administration</string>
    <string name="all">All</string>
</resources>