<?xml version="1.0" encoding="utf-8"?><!--
  ~ BIT Lalpur App
  ~
  ~ Created by Ayaan on 3/22/22, 10:45 PM
  ~ Copyright (c) 2022 . All rights reserved.
  ~ Last modified 3/22/22, 9:45 AM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_insta"
        android:icon="@drawable/ic_instagram"
        android:title="@string/insta"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_link"
        android:icon="@drawable/ic_link"
        android:title="@string/link"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"
        app:showAsAction="always" />
</menu>