<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_delete_all"
        android:icon="@drawable/ic_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="ifRoom" />
</menu>